spec/embedded-examples/parse_errors/no_question_mark.rfml
#! no_question_mark_test
# title: No Question Mark Test
# start_uri: /

This is an action with a question.
This is a question without a question mark
